Improved support for Java 11 and later.
I found that the PostgreSQL JDBC driver installs Java 8 as a dependency and it was
taking precedence to Java 11 in the default path due to higher precedence in alternatives.
This was fixed by manually setting Java 11 as the active one in alternatives, but it bubbled up
a few problems that have also been fixed:

- Connecting to Kafka with Java 11 and above requires the ssl.truststore.password parameter to
  be set, which wasn't required in Java 8. A few changes were made to generate the Kafka client
  config in /keytabs to include that parameter and also to add it to the SSB data provider
  configuration.
- Removed the "-XX:+UseParNewGC" from the EFM startup command if we're using Java 11 or later,
  since this parameter has been deprecated.
- Some old stacks that still being tested after each change were using old versions of EFM and
  MiNiFi that didn't support Java 11. Rather than removing these from the testing schedule, I
  updated those stacks with slightly more recent versions of that software that has support for
  Java 11.

 "This commit does not contain secrets"